Sign Here Please/objects/Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Color_Options__c</fullName>
        <label>Color Options</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Services_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Services Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Services_Refill_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Services Refill Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product-C</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product_C__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uniform_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uniform Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uniform_Laundry_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uniform Laundry Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekly_Rate__c</fullName>
        <label>Weekly Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Line Item</label>
    <nameField>
        <label>Quote Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>